# parallel-programming

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
lab_1/: CMakeLists.txt  dataProcessing.py  dataVisualization.py  function.cpp  function.h  main.cpp  matrix.cpp  matrix.h  matrix.txt  result.txt  task.txt  verification.py
lab_1/matrix/: matrix200_1.txt  matrix200_2.txt  result_200.txt
lab_1/report/: data.csv
lab_2/: CMakeLists.txt  dataVisualization.py  function.cpp  globals.cpp
lab_2/matrix/: matrix200_1.txt  matrix200_2.txt
lab_3/: CMakeLists.txt  dataProcessing.py  dataVisualization.py  function.cpp  function.h  globals.h  main.cpp  matrix.cpp  matrix.h  task.txt
lab_3/matrix/: result_200.txt  result_mpi_200.txt
lab_3/report/: mpi_data.csv
